🚀 MIGRATION: AWS SDK v1 → v2 (Phase 14)
## Migration Overview

Successfully migrated from AWS SDK v1 (1.12.565) to v2 (2.29.29)

### Benefits of SDK v2:
- ✅ Better performance and lower memory footprint
- ✅ Modern, fluent API design with builders
- ✅ Async support ready (S3AsyncClient)
- ✅ Active development and support
- ✅ No deprecation warnings

## Changes by File

### 1. ✅ pom.xml
**Dependencies Updated:**
- Removed: `com.amazonaws:aws-java-sdk-s3:1.12.565` (v1)
- Added: `software.amazon.awssdk:s3:2.29.29` (v2)
- Added: `software.amazon.awssdk:url-connection-client:2.29.29` (HTTP client)

**Version Property:**
```xml
<aws-sdk.version>2.29.29</aws-sdk.version>
```

### 2. ✅ S3Config.java
**API Changes:**
- `BasicAWSCredentials` → `AwsBasicCredentials.create()`
- `AWSStaticCredentialsProvider` → `StaticCredentialsProvider.create()`
- `AmazonS3ClientBuilder` → `S3Client.builder()`
- Region String → `Region.of(region)`

**Bean Method:**
- `amazonS3()` → `s3Client()` returns `S3Client`

**Maintained:**
- ✅ Credential validation (fail-fast)
- ✅ Region configuration (`sa-east-1` default)
- ✅ Profile-based activation (`@Profile("prod")`)

### 3. ✅ FotoStorageS3.java
**API Changes:**
- `AmazonS3` → `S3Client`
- `PutObjectRequest` → Builder pattern with `RequestBody`
- `S3Object` → `ResponseInputStream<GetObjectResponse>`
- `DeleteObjectsRequest` → Builder with `Delete` object
- `getUrl()` → `S3Client.utilities().getUrl()`
- `IOUtils.toByteArray()` → `InputStream.readAllBytes()`

**Methods Updated:**
- ✅ `salvar()` - Upload with RequestBody
- ✅ `recuperar()` - GetObjectRequest builder
- ✅ `recuperarThumbnail()` - Prefix handling
- ✅ `excluir()` - DeleteObjectsRequest builder
- ✅ `getUrl()` - S3Utilities
- ✅ `enviarFoto()` - PutObjectRequest builder
- ✅ `enviarThumbnail()` - PutObjectRequest builder

**Maintained:**
- ✅ Private ACL (no public access)
- ✅ Resource leak fixes (try-with-resources)
- ✅ Single InputStream read
- ✅ Thumbnail generation

### 4. ✅ FotoStorageS3Tes